# PressBrakeAdminQt

./: .gitignore  CMakeLists.txt
data/: admin.pass.2026-02-11_21-13-09.bak  machine.csv.2026-02-12_13-17-48.bak  machines.csv.schema.json  material.csv.2026-02-11_21-58-27.bak  material.csv.2026-02-12_13-56-37.bak  material.csv.schema.json
include/: AdminDbPaths.hpp  AdminTab.hpp  BackupUtils.hpp  ChangePasswordDialog.hpp  CsvTableModel.hpp  CsvUtils.hpp  DbEditorWidget.hpp  MainWindow.hpp  PasswordChangeWidget.hpp  PasswordDialog.hpp
src/: AdminDbPaths.cpp  AdminTab.cpp  BackupUtils.cpp  CapsLock_macos.mm  ChangePasswordDialog.cpp  CsvTableModel.cpp  CsvUtils.cpp  DbEditorWidget.cpp  MainWindow.cpp  PasswordChangeWidget.cpp  PasswordDialog.cpp  main.cpp
